--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ jobs:
     env:
       CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
       SCRIPT_ID: ${{ secrets.SCRIPT_ID }}
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
 
     steps:
       - name: Setup repository
@@ -32,7 +33,8 @@ jobs:
 
       - name: Update .clasp.json
         run: |
-          npx clasp settings settingKey $SCRIPT_ID
+          npx clasp settings scriptId $SCRIPT_ID
+          npx clasp settings projectId $PROJECT_ID
 
       - name: Deploy
         run: |
